add skills and my projects

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>hello</h1>
+    <header>
+        <h1>🍭 my personal site</h1>
+    </header>
+
+    <section>
+        <article>🔝 [doing] => Nanodegree React and React Native</article>
+
+        <!-- Skills -->
+        <h2>Skills</h2>
+        <ul class="list">
+            <li>🤖 - HTML5</li>
+            <li>🤖 - CSS3</li>
+            <li>🤖 - React </li>
+            <li>📚 - React Native</li>
+            <li>😎 - Sass</li>
+            <li>😎 - jQuery</li>
+            <li>😎 - Vanilla JS</li>
+            <li>😎 - Bootstrap 3/4</li>
+        </ul>
+
+        <!-- My projects -->
+        <h2>My projects</h2>
+
+        <!-- Socials -->
+        <h2>Socials</h2>
+        <a href="https://github.com/allancarlos123" target="_noblank">Github</a>
+        <a href="https://www.linkedin.com/in/allancarlos/" target="_noblank">Linkedin</a>
+        <a href="https://telegram.me/allancarlos_io" target="_noblank">Telegram</a>
+    </section>
 </body>
 </html>
