feat: Skill Cards

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="content">
           <div class="card">
             <div class="card-title">
-              <h5>React</h5>
+              <h5>HTML5</h5>
             </div>
 
             <div class="card-body">
@@ -56,7 +56,7 @@
 
           <div class="card">
             <div class="card-title">
-              <h5>React</h5>
+              <h5>CSS</h5>
             </div>
 
             <div class="card-body">
@@ -84,7 +84,147 @@
 
           <div class="card">
             <div class="card-title">
-              <h5>React</h5>
+              <h5>React Native</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>JQuery</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>Bootstrap 3/4</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>SASS</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>Semantic UI</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>NodeJS</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>JavaScript</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>MongoDB</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>Express</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>PHP</h5>
+            </div>
+
+            <div class="card-body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-title">
+              <h5>Firebase</h5>
             </div>
 
             <div class="card-body">
