feat: links to socials buttons

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           </p>
 
           <ul class="list-horizontal">
-            <li><a href="#"><img src="./instagram.svg" alt="Instagram"></a></li>
-            <li><a href="#"><img src="./twitter.svg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="./linkedin.svg" alt="Linkedin"></a></li>
-            <li><a href="#"><img src="./github.svg" alt="Github"></a></li>
+            <li><a href="https://www.instagram.com/allancarlos999/" target="_blank"><img src="./instagram.svg" alt="Instagram"></a></li>
+            <li><a href="https://twitter.com/allancarlos_1" target="_blank"><img src="./twitter.svg" alt="Twitter"></a></li>
+            <li><a href="https://www.linkedin.com/in/allancarlos/" target="_blank"><img src="./linkedin.svg" alt="Linkedin"></a></li>
+            <li><a href="https://github.com/allancarlos123" target="_blank"><img src="./github.svg" alt="Github"></a></li>
           </ul>
 
           <ul class="contacts">
