--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="10" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="80" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -60,11 +60,11 @@
 
           <div class="card">
             <div class="card__header">
-              <span>CSS</span>
+              <span>CSS3</span>
             </div>
 
             <div class="card__body">
-              <div class="progress-wrap progress" data-progress-percent="55" style="width: 0">
+              <div class="progress-wrap progress" data-progress-percent="74" style="width: 0">
                 <div class="progress-bar progress"></div>
               </div>
             </div>
@@ -77,7 +77,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="70" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -91,7 +91,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="25" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="80" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -105,7 +105,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="50" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -119,7 +119,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="80" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -133,7 +133,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="90" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -147,7 +147,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="50" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -161,7 +161,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="35" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -175,7 +175,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="30" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -189,7 +189,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="30" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -203,7 +203,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="35" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -217,7 +217,21 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="40" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__header">
+              <span>Rails</span>
+            </div>
+
+            <div class="card__body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="50" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -231,7 +245,7 @@
 
             <div class="card__body">
               <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="85" style="width: 0">
+                <div class="progress-wrap progress" data-progress-percent="50" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
