--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
           <div class="card">
             <div class="card__header">
-              <span>SASS</span>
+              <span>SCSS</span>
             </div>
 
             <div class="card__body">
