--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
             <figure class="sample">
               <img class="sample__image" src="./site2.png" alt="MyReads">
-              <figcaption class="sample__title sample__title--link"><a href="http://allancarlos.io/myreads/" target="_blank">MyReads</a></figcaption>
+              <figcaption class="sample__title sample__title--link"><a href="https://allancarlos123.github.io/myreads/" target="_blank">MyReads</a></figcaption>
             </figure>
 
             <figure class="sample">
