--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>allancarlos.io</title>
+  <title>Allan Carlos - Software Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
@@ -21,16 +21,23 @@
 
         <p>Hello, my name is Allan Carlos.</p>
         <p>
-          I'm a Full Stack Developer with interest in building most effective, clean and fluid apps. I like to be
-          involved in product inception, validation, and I also love learning and explore current technologies that
-          are used by large startups. I am currently learning English to start an international career.
+          I'm a Full Stack Developer with interest in building most effective, clean and fluid apps. I like to be involved in product inception, validation, and I also love learning and explore current technologies that are used by large startups. I am currently
+          learning English to start an international career.
         </p>
 
         <ul class="my-informations__socials">
-          <li><a href="https://www.instagram.com/allancarlos999/" target="_blank"><img src="./instagram.svg" alt="Instagram"></a></li>
-          <li><a href="https://twitter.com/allancarlos_1" target="_blank"><img src="./twitter.svg" alt="Twitter"></a></li>
-          <li><a href="https://www.linkedin.com/in/allancarlos/" target="_blank"><img src="./linkedin.svg" alt="Linkedin"></a></li>
-          <li><a href="https://github.com/allancarlos123" target="_blank"><img src="./github.svg" alt="Github"></a></li>
+          <li>
+            <a href="https://www.instagram.com/this.is.allan_" target="_blank"><img src="./instagram.svg" alt="Instagram"></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/allan_git" target="_blank"><img src="./twitter.svg" alt="Twitter"></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/allancarlos/" target="_blank"><img src="./linkedin.svg" alt="Linkedin"></a>
+          </li>
+          <li>
+            <a href="https://github.com/this-is-allan" target="_blank"><img src="./github.svg" alt="Github"></a>
+          </li>
         </ul>
 
         <ul class="my-informations__contacts">
@@ -49,7 +56,7 @@
         <div class="content">
           <div class="card">
             <div class="card__header">
-              <span>HTML5</span>
+              <span>HTML</span>
             </div>
 
             <div class="card__body">
@@ -63,7 +70,7 @@
 
           <div class="card">
             <div class="card__header">
-              <span>CSS3</span>
+              <span>CSS</span>
             </div>
 
             <div class="card__body">
@@ -90,6 +97,20 @@
           <div class="card">
             <div class="card__header">
               <span>React</span>
+            </div>
+
+            <div class="card__body">
+              <div class="progress">
+                <div class="progress-wrap progress" data-progress-percent="80" style="width: 0">
+                  <div class="progress-bar progress"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__header">
+              <span>Next.js</span>
             </div>
 
             <div class="card__body">
@@ -131,40 +152,12 @@
 
           <div class="card">
             <div class="card__header">
-              <span>Bootstrap 3/4</span>
-            </div>
-
-            <div class="card__body">
-              <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="90" style="width: 0">
-                  <div class="progress-bar progress"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__header">
               <span>SCSS</span>
             </div>
 
             <div class="card__body">
               <div class="progress">
                 <div class="progress-wrap progress" data-progress-percent="50" style="width: 0">
-                  <div class="progress-bar progress"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__header">
-              <span>Semantic UI</span>
-            </div>
-
-            <div class="card__body">
-              <div class="progress">
-                <div class="progress-wrap progress" data-progress-percent="35" style="width: 0">
                   <div class="progress-bar progress"></div>
                 </div>
               </div>
@@ -215,7 +208,7 @@
 
           <div class="card">
             <div class="card__header">
-              <span>PHP</span>
+              <span>Styled Components</span>
             </div>
 
             <div class="card__body">
@@ -263,20 +256,57 @@
         <div class="content content__portfolio">
           <div class="owl-carousel">
             <figure class="sample">
+              <img height="145" class="sample__image" src="./site5.png" alt="Landing page da jamp">
+              <figcaption class="sample__title sample__title--link">
+                <a href="https://jampapp.com/" target="_blank">
+                  Landing Page da Jamp
+                </a>
+              </figcaption>
+            </figure>
+
+            <figure class="sample">
+              <img height="145" class="sample__image" src="./site6.png" alt="Ecommerce da jamp">
+              <figcaption class="sample__title sample__title--link">
+                <a href="https://jampapp.com/" target="_blank">
+                  Ecommerce de delivery da Jamp
+                </a>
+              </figcaption>
+            </figure>
+
+            <figure class="sample">
               <img class="sample__image" src="./site1.png" alt="Revista Dois Pontos">
-              <figcaption class="sample__title sample__title--link"><a href="http://www.revistadoispontos.org/" target="_blank">Revista
-                  Dois Pontos</a></figcaption>
+              <figcaption class="sample__title sample__title--link">
+                <a href="http://www.revistadoispontos.org/" target="_blank">
+                  Revista Dois Pontos
+                </a>
+              </figcaption>
+            </figure>
+
+            <figure class="sample">
+              <img class="sample__image" src="./site1.png" alt="Revista Dois Pontos">
+              <figcaption class="sample__title sample__title--link">
+                <a href="http://www.revistadoispontos.org/" target="_blank">
+                  Revista Dois Pontos
+                </a>
+              </figcaption>
             </figure>
 
             <figure class="sample">
               <img class="sample__image" src="./site2.png" alt="MyReads">
-              <figcaption class="sample__title sample__title--link"><a href="https://allancarlos123.github.io/myreads/" target="_blank">MyReads</a></figcaption>
+              <figcaption class="sample__title sample__title--link">
+                <a href="https://allancarlos123.github.io/myreads/" target="_blank">
+                  MyReads
+                </a>
+              </figcaption>
             </figure>
 
             <figure class="sample">
               <img class="sample__image" src="./site4.png" alt="Dois Pontos - Entrevista">
-              <figcaption class="sample__title sample__title--link"><a href="http://www.revistadoispontos.org/" target="_blank">
-                  Dois Pontos: Entrevista</a></figcaption>
+              <figcaption class="sample__title sample__title--link">
+                <a href="http://www.revistadoispontos.org/" target="_blank">
+                  Dois Pontos: Entrevista
+                </a>
+              </figcaption>
             </figure>
           </div>
         </div>
