--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
   <link href="./assets/owl.carousel.min.css" rel="stylesheet">
   <link href="./assets/owl.theme.default.min.css" rel="stylesheet">
+
+  <!-- Hotjar Tracking Code for https://this-is-allan.github.io/ -->
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3203884,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
 </head>
 
 <body>
